--- a/sixteen/css/main.css
+++ b/sixteen/css/main.css
@@ -34,6 +34,7 @@ header {
   margin: 0;
   padding: 0;
   border: 0;
+  border-radius: 0;
   position: absolute;
   right: 0;
 }
@@ -73,4 +74,8 @@ main p {
 #down-arrow {
   height: 3vh;
   margin-top: 5vh;
+}
+
+nav {
+  display: none;
 }
