Class 9 Resource Updates

--- a/class9/css/float-layout.css
+++ b/class9/css/float-layout.css
@@ -4,3 +4,17 @@ main,
 #sidebar {
   border: 1px solid #000;
 }
+
+#sidebar {
+  float: left;
+  height: 50vh;
+}
+
+main {
+  float: right;
+  height: 50vh;
+}
+
+footer {
+  clear: right;
+}
